// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Object Number Bold 1`] = `
<div
  class="fddocs-container"
>
  
    
  <span
    class="fd-object-number fd-object-number--negative"
  >
    
        
    <span
      class="fd-object-number__text fd-object-number__text--bold"
    >
      -2,000.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--critical"
  >
    
        
    <span
      class="fd-object-number__text fd-object-number__text--bold"
    >
      0.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--positive"
  >
    
        
    <span
      class="fd-object-number__text fd-object-number__text--bold"
    >
      1,000.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--informative"
  >
    
        
    <span
      class="fd-object-number__text fd-object-number__text--bold"
    >
      100.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number"
  >
    
        
    <span
      class="fd-object-number__text fd-object-number__text--bold"
    >
      999.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  

</div>
`;

exports[`Storyshots Components/Object Number Large 1`] = `
<div
  class="fddocs-container"
>
  
    
  <span
    class="fd-object-number fd-object-number--large fd-object-number--negative"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      -2,000.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--large fd-object-number--critical"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      0.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--large fd-object-number--positive"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      1,000.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--large fd-object-number--informative"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      100.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--large"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      999.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  

</div>
`;

exports[`Storyshots Components/Object Number Primary 1`] = `
<div
  class="fddocs-container"
>
  
    
  <span
    class="fd-object-number fd-object-number--negative"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      -2,000.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--critical"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      0.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--positive"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      1,000.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number fd-object-number--informative"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      100.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  
    
  <span
    class="fd-object-number"
  >
    
        
    <span
      class="fd-object-number__text"
    >
      999.00
    </span>
    <span
      class="fd-object-number__unit"
    >
      EUR
    </span>
    
    
  </span>
  

</div>
`;
